<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.travelcompanion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_trips"
            app:destination="@id/navigation_trips"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_home_to_map"
            app:destination="@id/navigation_map"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_home_to_new_trip"
            app:destination="@id/navigation_new_trip"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_home_to_trip_details"
            app:destination="@id/navigation_trip_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_trips"
        android:name="com.travelcompanion.ui.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips">

        <action
            android:id="@+id/action_trips_to_trip_details"
            app:destination="@id/navigation_trip_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_trips_to_new_trip"
            app:destination="@id/navigation_new_trip"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_trips_to_tips"
            app:destination="@id/navigation_tips"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.travelcompanion.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.travelcompanion.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.travelcompanion.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_profile_to_statistics"
            app:destination="@id/navigation_statistics"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_profile_to_tips"
            app:destination="@id/navigation_tips"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.travelcompanion.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_new_trip"
        android:name="com.travelcompanion.ui.newtrip.NewTripFragment"
        android:label="@string/new_trip"
        tools:layout="@layout/fragment_new_trip" />

    <fragment
        android:id="@+id/navigation_trip_details"
        android:name="com.travelcompanion.ui.tripdetails.TripDetailsFragment"
        android:label="@string/trip_details"
        tools:layout="@layout/fragment_trip_details">
        <argument
            android:name="tripId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.travelcompanion.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/navigation_tracking"
        android:name="com.travelcompanion.ui.tracking.TrackingActivity"
        android:label="@string/tracking_journey"
        tools:layout="@layout/activity_tracking_journey" />

</navigation>
